--- a/src/app/pages/admin/admin-motel-room/admin-motel-room.component.html
+++ b/src/app/pages/admin/admin-motel-room/admin-motel-room.component.html
@@ -30,7 +30,7 @@
             <div class="content-fluid">
                 <div class="card">
                     <div class="card-header">
-                        <h3 class="card-title">Danh sách phòng trọ</h3>
+                        <h3 class="card-title">Danh sách phòng trọ (Chọn 1 phòng trọ để xem chi tiết)</h3>
                         <div class="card-tools">
                             <div class="input-group input-group-sm" style="width: 150px;">
                               <input type="text" name="table_search" class="form-control float-right" placeholder="Search">
