--- a/src/app/pages/admin/admin-rental-contract/admin-rental-contract.component.html
+++ b/src/app/pages/admin/admin-rental-contract/admin-rental-contract.component.html
@@ -13,10 +13,10 @@
         <div class="content-header">
             <div class="container-fluid">
                 <div class="row mb-2">
-                    <div class="col-sm-6">
-                        <h1 class="m-0">Lịch sử thuê phòng khách hàng: Nguyễn Văn A</h1>
+                    <div class="col-sm-8">
+                        <h1 class="m-0">Lịch sử thuê phòng khách hàng: {{clientDto.fullName}}</h1>
                     </div><!-- /.col -->
-                    <div class="col-sm-6">
+                    <div class="col-sm-4">
                         <ol class="breadcrumb float-sm-right">
                             <li class="breadcrumb-item"><a [routerLink]="['/admin']">Trang chủ</a></li>
                             <li class="breadcrumb-item active">Lịch sử thuê phòng</li>
@@ -37,35 +37,35 @@
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
-                            <button nz-button nzType="primary" (click)="showModalCreateClient()">Thêm mới</button>
-                            <br />
-                            <br />
                             <nz-table nzShowSizeChanger nzBordered="true" #filterTable [nzData]="listOfDisplayData"
-                                [nzFrontPagination]="false" [nzLoading]="loading">
+                                [nzFrontPagination]="true" [nzLoading]="loading" [nzTotal]="total"
+                                [nzPageSize]="pageSize" [nzPageIndex]="pageIndex">
                                 <thead>
                                     <tr>
                                         <th>STT</th>
-                                        <th>Tên khách hàng</th>
-                                        <th>Căn cước công dân</th>
-                                        <th>Địa chỉ</th>
-                                        <th>Số điện thoại</th>
-                                        <th>Email</th>
-                                        <th>Trạng thái</th>
-                                        <th>Ghi chú</th>
+                                        <th>Mã phòng thuê</th>
+                                        <th>Địa chỉ phòng</th>
+                                        <th>Số điện thoại khách hàng</th>
+                                        <th>Ngày bắt đầu thuê</th>
+                                        <th>Ngày hết hạn</th>
+                                        <th>Tiền đặt cọc</th>
+                                        <th>Ngày tạo</th>
                                         <th>Thao tác</th>
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let data of filterTable.data; let i= index" style="cursor: pointer;"
-                                        (click)="data.status == 'Đang thuê' ? onProcessContract(data.id) : ''">
+                                    <tr *ngFor="let data of filterTable.data; let i= index" style="cursor: pointer;">
                                         <td>{{i}}</td>
-                                        <td>{{ data.fullName }}</td>
-                                        <td>{{ data.idCard }}</td>
-                                        <td>{{ data.address }}</td>
-                                        <td>{{ data.tel }}</td>
-                                        <td>{{ data.email }}</td>
-                                        <td>{{ data.status }}</td>
-                                        <td>{{ data.note }}</td>
+                                        <td>{{data.roomDto.name}}</td>
+                                        <td>{{'Tòa nhà ' +
+                                            data.roomDto.buildingDto.name + ', ' +
+                                            data.roomDto.buildingDto.address}}</td>
+                                        <td>{{data.clientDto.phoneNumber}}</td>
+                                        <td>{{data.startDate | date: 'dd-MM-yyyy'}}</td>
+                                        <td>{{data.dueDate | date: 'dd-MM-yyyy'}}</td>
+                                        <td>{{ data.roomDeposit.toLocaleString().replaceAll(",",
+                                            ".")}} đ</td>
+                                        <td>{{data.createdAt | date: 'dd-MM-yyyy'}}</td>
                                         <td [nzRight]="false">
                                             <a><span nz-icon nzType="edit" nzTheme="outline"></span></a>
                                             <nz-divider nzType="vertical"></nz-divider>
