--- a/src/app/pages/admin/admin-sidebar/admin-sidebar.component.html
+++ b/src/app/pages/admin/admin-sidebar/admin-sidebar.component.html
@@ -50,7 +50,7 @@
                         </p>
                     </a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                     <a [routerLink]="['/admin/payment']" class="nav-link">
                         <i class="nav-icon fas fa-money-check-alt"></i>
                         <p>
@@ -76,7 +76,7 @@
                             <i class="fas fa-angle-left right"></i>
                         </p>
                     </a>
-                </li>
+                </li> -->
             </ul>
         </nav>
         <!-- /.sidebar-menu -->
