--- a/src/app/pages/admin/admin-rental-contract/admin-rental-contract.component.html
+++ b/src/app/pages/admin/admin-rental-contract/admin-rental-contract.component.html
@@ -33,7 +33,7 @@
                 <div class="col">
                     <div class="card">
                         <div class="card-header">
-                            <h3 class="card-title">Danh sách thuê phòng</h3>
+                            <h3 class="card-title">Danh sách thuê phòng (Chọn hợp đồng để thanh toán)</h3>
                         </div>
                         <!-- /.card-header -->
                         <div class="card-body">
@@ -50,11 +50,12 @@
                                         <th>Ngày hết hạn</th>
                                         <th>Tiền đặt cọc</th>
                                         <th>Ngày tạo</th>
-                                        <th>Thao tác</th>
+                                        <!-- <th>Thao tác</th> -->
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let data of filterTable.data; let i= index" style="cursor: pointer;">
+                                    <tr *ngFor="let data of filterTable.data; let i= index" style="cursor: pointer;"
+                                        (click)="onCreateBill(data.id)">
                                         <td>{{i}}</td>
                                         <td>{{data.roomDto.name}}</td>
                                         <td>{{'Tòa nhà ' +
@@ -66,11 +67,11 @@
                                         <td>{{ data.roomDeposit.toLocaleString().replaceAll(",",
                                             ".")}} đ</td>
                                         <td>{{data.createdAt | date: 'dd-MM-yyyy'}}</td>
-                                        <td [nzRight]="false">
+                                        <!-- <td [nzRight]="false">
                                             <a><span nz-icon nzType="edit" nzTheme="outline"></span></a>
                                             <nz-divider nzType="vertical"></nz-divider>
                                             <a><span nz-icon nzType="delete" nzTheme="outline"></span></a>
-                                        </td>
+                                        </td> -->
                                     </tr>
                                 </tbody>
                             </nz-table>
